xfsprogs-2.8.9 (18 July 2006)
	- Fix rpm issue with install targets as uid/gid zero (we now
	  using symbolic names rather than the numeric versions).

xfsprogs-2.8.8 (14 July 2006)
	- Fix issues with makedepend on libtool libraries.

xfsprogs-2.8.7 (10 July 2006)
	- Fix build of xfs_logprint for different uuid_t definitions;
          thanks to Craig Rodrigues.

xfsprogs-2.8.6 (07 July 2006)
	- Fixed xfs_repair handling of duplicate names in a directory.

xfsprogs-2.8.5 (05 July 2006)
	- Update translation Makefile to work better with the Ubuntu
	  translation system.  Thanks to feedback from Martin Pitt.
	- Fix annoying "ignores datarootdir" warning from configure.
	- Fix issues with makedepend build infrastructure.
	- Add prefetch code for improved xfs_repair run times.

xfsprogs-2.8.4 (23 June 2006)
	- Improve Debian udeb package handling, thanks to Frans Pop.
	- Fix a situation where xfs_growfs can fail to match a block
	  device to a filesystem correctly; thanks to Bastian Kleineidam.
	- Minor corrections to the xfs_growfs man page.

xfsprogs-2.8.3 (21 June 2006)
	- Fix a possible segv in xfs_growfs; thanks to Bastian Kleineidam.

xfsprogs-2.8.2 (17 June 2006)
	- More updates to repair/libxfs for improving performance
	- Incorporate librt into the build process for lio_listio
	- Minor xfs_logprint tweaks and fixes.
	- Small updates to xfs_io manual page.
	- Several fixes from earler 2.8 releases with respect to
	  inode/buffer cache refcounting.

xfsprogs-2.8.1 (29 May 2006)
	- Fix endianness issues on FreeBSD.

xfsprogs-2.8.0 (18 May 2006)
	- Initial pass at user space caching, ultimately provides
	  a starting point for a faster, parallel version of repair.
	- Fix several inode/buffer reference counting issues.
	- Fix compiler warnings, and builds on certain glibc versions
	  having issues with the device major() macro.
	- Added code to xfs_db and xfs_admin to allow conversion
	  from version 1 to version 2 logs.

xfsprogs-2.7.18 (16 May 2006)